...
    <string name="legals">Legals</string>
    <!--Info-->

    <!--Navigation Drawer-->
    <string-array name="drawer">
        <item>Favorites</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <!--Navigation Drawer-->

    <!--Notifications-->
    <string name="missingKeyEntries">The last name and a recording of the pronunciation are required.
...
